Menus modificados (falta implementacion de getPlatos() en RestauranteService)